--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,17 @@
 name: custom_info_window
 description: A widget based custom info window for google_maps_flutter package.
-version: 0.0.4
+version: 1.0.0
 repository: https://github.com/abhishekduhoon/custom_info_window
 issue_tracker: https://github.com/abhishekduhoon/custom_info_window/issues
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  google_maps_flutter: ^1.1.1
+  google_maps_flutter: ^2.0.2
 
 dev_dependencies:
   flutter_test:
