--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  clippy_flutter: ^2.0.0-nullsafety.1
   flutter:
     sdk: flutter
   google_maps_flutter: ^2.0.2
